fixed transform scale overlap bug

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -13,6 +13,7 @@
 
 header {    
     position: fixed;
+    z-index: 1;
     padding-block: 25px;
 
     width: 100%;
